--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <div class="headr">
-    <img class="top-cloud"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\cloud.svg">
+    <img class="top-cloud"src="cloud.svg">
     <h1>I'm Varun</h1>
     <h2  class="h2tag"><strong>Fullstack web developer</strong></h2>
-    <img class="btm-cloud"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\cloud.svg"><br>
+    <img class="btm-cloud"src="cloud.svg"><br>
     <img class="mountain" src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\pic1.svg"><br>
 </div>
 <div class="div1">
