updated main img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>I'm Varun</h1>
     <h2  class="h2tag"><strong>Fullstack web developer</strong></h2>
     <img class="btm-cloud"src="cloud.svg"><br>
-    <img class="mountain" src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\pic1.svg"><br>
+    <img class="mountain" src="pic1.svg"><br>
 </div>
 <div class="div1">
   <img class="logo" src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\boy.jpeg">
