--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img class="mountain" src="pic1.svg"><br>
 </div>
 <div class="div1">
-  <img class="logo" src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\boy.jpeg">
+  <img class="logo" src="boy.jpeg">
   <h2 class="logoexp">Hi.</h2><br>
   <p class="tag1">I'm a web designer / developer. <br>I have a passion for web design and love to create for web and Mobile applications.</p>
 </div>
@@ -29,14 +29,14 @@
       <p class="tag2">I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
   </div>
   <div>
-    <img class="skillogo1"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\skilllogo.svg">
+    <img class="skillogo1"src="skilllogo.svg">
   </div>  
 </div>
 <h3  class="sk1">Develop what you need.</h3><br>
 <div class="develop">
    
     <div>
-    <img class="skillogo2"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\logoskill2.svg">
+    <img class="skillogo2"src="logoskill2.svg">
   </div>
   <div>
     <p class="tag3">I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
