--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <img class="btm-cloud"src="cloud.svg"><br>
     <img class="mountain" src="pic1.svg"><br>
 </div>
-<div class="div1">
-  <img class="logo" src="boy.jpeg">
-  <h2 class="logoexp">Hi.</h2><br>
-  <p class="tag1">I'm a web designer / developer. <br>I have a passion for web design and love to create for web and Mobile applications.</p>
+<div class="grid">
+  <img class="griditem1" src="boy.jpeg">
+  <h2 class="griditem2">Hi.</h2><br>
+  <p class="griditem2">I'm a web designer / developer. <br>I have a passion for web design and love to create for web and Mobile applications.</p>
 </div>
 <br>
     <h3 class="sk1">Design what you want.</h3><br>
