--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
   </head>
   <body>
     <div class="headr">
-    <img class="top-cloud"src="cloud.svg">
+    <img class="top-cloud"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\cloud.svg">
     <h1>I'm Varun</h1>
     <h2  class="h2tag"><strong>Fullstack web developer</strong></h2>
-    <img class="btm-cloud"src="cloud.svg"><br>
-    <img class="mountain" src="pic1.svg"><br>
+    <img class="btm-cloud"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\cloud.svg"><br>
+    <img class="mountain" src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\pic1.svg"><br>
 </div>
 <div class="grid">
-  <img class="griditem1" src="boy.jpeg">
-  <h2 class="griditem2">Hi.</h2><br>
+  <img class="griditem1" src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\boy.jpeg">
+  <h2 class="griditem2" style="font-size:2em">Hi.</h2><br>
   <p class="griditem2">I'm a web designer / developer. <br>I have a passion for web design and love to create for web and Mobile applications.</p>
 </div>
+<hr>
+<DIV class="flex">
 <br>
     <h3 class="sk1">Design what you want.</h3><br>
     <div class="skills">
@@ -29,24 +31,26 @@
       <p class="tag2">I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
   </div>
   <div>
-    <img class="skillogo1"src="skilllogo.svg">
+    <img class="skillogo1"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\skilllogo.svg">
   </div>  
 </div>
 <h3  class="sk1">Develop what you need.</h3><br>
 <div class="develop">
    
     <div>
-    <img class="skillogo2"src="logoskill2.svg">
+    <img class="skillogo2"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\logoskill2.svg">
   </div>
   <div>
     <p class="tag3">I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
   </div>
 </div><br>
-<hr class="line"><br>
+</DIV>
+<hr>
 <div class="lstele">
 <div class="contact-me">
   <h2 class="foot">Get In Touch</h2>
   <p class="lastft">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch .</p><br><br>
+  
 </div>
 
 
@@ -61,3 +65,4 @@
 </div>
 </body>
 </html>
+
