--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
     <div class="headr">
-    <img class="top-cloud"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\cloud.svg">
+    <img class="top-cloud"src="cloud.svg">
     <h1>I'm Varun</h1>
     <h2  class="h2tag"><strong>Fullstack web developer</strong></h2>
-    <img class="btm-cloud"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\cloud.svg"><br>
-    <img class="mountain" src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\pic1.svg"><br>
+    <img class="btm-cloud"src="cloud.svg"><br>
+    <img class="mountain" src="pic1.svg"><br>
 </div>
 <div class="grid">
-  <img class="griditem1" src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\boy.jpeg">
+  <img class="griditem1" src="boy.jpeg">
   <h2 class="griditem2" style="font-size:2em">Hi.</h2><br>
   <p class="griditem2">I'm a web designer / developer. <br>I have a passion for web design and love to create for web and Mobile applications.</p>
 </div>
@@ -31,14 +31,14 @@
       <p class="tag2">I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
   </div>
   <div>
-    <img class="skillogo1"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\skilllogo.svg">
+    <img class="skillogo1"src="skilllogo.svg">
   </div>  
 </div>
 <h3  class="sk1">Develop what you need.</h3><br>
 <div class="develop">
    
     <div>
-    <img class="skillogo2"src="C:\Users\GOWTHAM\OneDrive\Desktop\VARUN\web development\MyProfessionalSite\logoskill2.svg">
+    <img class="skillogo2"src="logoskill2.svg">
   </div>
   <div>
     <p class="tag3">I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
