updated the class names

--- a/index.html
+++ b/index.html
@@ -2,67 +2,101 @@
 <html lang="en" dir="ltr">
   <head>
     <title>WELCOME TO MY PROFESSIONAL SITE</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link link rel="shortcut icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="css/style.css" />
+    <link link rel="shortcut icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="headr">
-    <img class="top-cloud"src="cloud.svg">
-    <h1>I'm Varun</h1>
-    <h2  class="h2tag"><strong>Fullstack web developer</strong></h2>
-    <img class="btm-cloud"src="cloud.svg"><br>
-    <img class="mountain" src="pic1.svg"><br>
-</div>
-<div class="grid">
-  <img class="griditem1" src="boy.jpeg">
-  <h2 class="griditem2" style="font-size:2em">Hi.</h2><br>
-  <p class="griditem2">I'm a web designer / developer. <br>I have a passion for web design and love to create for web and Mobile applications.</p>
-</div>
-<hr>
-<DIV class="flex">
-<br>
-    <h3 class="sk1">Design what you want.</h3><br>
-    <div class="skills">
-    
-    <div>
-      <p class="tag2">I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
-  </div>
-  <div>
-    <img class="skillogo1"src="skilllogo.svg">
-  </div>  
-</div>
-<h3  class="sk1">Develop what you need.</h3><br>
-<div class="develop">
-   
-    <div>
-    <img class="skillogo2"src="logoskill2.svg">
-  </div>
-  <div>
-    <p class="tag3">I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
-  </div>
-</div><br>
-</DIV>
-<hr>
-<div class="lstele">
-<div class="contact-me">
-  <h2 class="foot">Get In Touch</h2>
-  <p class="lastft">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch .</p><br><br>
-  
-</div>
+      <img class="top-cloud" src="cloud.svg" />
+      <h1>I'm Varun</h1>
+      <h2 class="h2tag"><strong>Fullstack web developer</strong></h2>
+      <img class="btm-cloud" src="cloud.svg" /><br />
+      <img class="mountain" src="pic1.svg" /><br />
+    </div>
 
+    <div class="flex-display">
+      <img class="boy-logo" src="boy.jpeg" />
+      <div class="main-description">
+        <h2 class="description-text" style="font-size: 2em">Hi.</h2>
+        <p class="description-text">
+          I'm a web designer / developer. <br />I have a passion for web design
+          and love to create for web and Mobile applications.
+        </p>
+      </div>
+    </div>
 
-<div class="botmcont">
- <div><a class="btn1" href="https://www.linkedin.com/in/varun-mayilvaganan-662781234">CONTACT ME</a></div>
-<div><a class="btn2" href="https://github.com/Varun-Mayilvaganan">GIT-HUB</a></div>
-<div><a class="btn3" href="mailto:varunmayilvaganan11@gmail.com">E-MAIL</a></div>
+    <hr />
 
-</div>
-<br>
-    <p class="copy">©Varun_Mayilvaganan2022.</p>
-</div>
-</body>
+    <div class="flex-display width-full">
+      <h3 class="sk1">Design what you want.</h3>
+      <div class="skills">
+        <div class="sub-description">
+          <p class="tag2">
+            I like to keep it simple. My goals are to focus on typography,
+            content and conveying the message that you want to send.
+          </p>
+        </div>
+        <div>
+          <img class="skillogo1" src="skilllogo.svg" />
+        </div>
+      </div>
+    </div>
+
+    <div class="flex-display width-full">
+      <h3 class="sk1">Develop what you need.</h3>
+      <div class="develop">
+        <div>
+          <img class="skillogo2" src="logoskill2.svg" />
+        </div>
+        <div class="sub-description">
+          <p class="tag3">
+            I'm a developer, so I know how to create your website to run across
+            devices using the latest technologies available.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="lstele">
+      <div class="contact-me">
+        <h2 class="foot">Get In Touch</h2>
+        <p class="lastft">
+          If you have a project that you want to get started, think you need my
+          help with something or just fancy saying hey, then get in touch .
+        </p>
+      </div>
+
+      <div class="botmcont">
+        <div>
+          <a
+            class="btn"
+            href="https://www.linkedin.com/in/varun-mayilvaganan-662781234"
+            >CONTACT ME</a
+          >
+        </div>
+
+        <div>
+          <a class="btn" href="https://github.com/Varun-Mayilvaganan"
+            >GIT-HUB</a
+          >
+        </div>
+
+        <div>
+          <a class="btn" href="mailto:varunmayilvaganan11@gmail.com">E-MAIL</a>
+        </div>
+      </div>
+
+      <div class="copy">
+        <p>©Varun_Mayilvaganan2022.</p>
+      </div>
+    </div>
+  </body>
 </html>
-
